added messege page fixed responsive

--- a/src/add-new-contact.html
+++ b/src/add-new-contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="./output.css" rel="stylesheet" />
+    <link href="./css/output.css" rel="stylesheet" />
     <title>add new contact</title>
     <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" /> -->
   </head>
@@ -29,7 +29,7 @@
         </div>
 
           <div class="flex items-center">
-            <div class="flex items-center px-2 space-x-1 sm:space-x-3 2xl:space-x-5">
+            <div class="flex items-center px-2 sm:space-x-3 2xl:space-x-5">
 
               <!-- search -->
                 <div class="hidden sm:block">
@@ -50,7 +50,7 @@
                 </div>
 
                 <!-- notinfication -->
-                <div class="pr-[22px] 2xl:pr-8 border-r-[2px] border-r-gray-100">
+                <div class="sm:pr-[22px] 2xl:pr-8 sm:border-r-[2px] border-r-gray-100">
                   <button class="relative size-[30px] sm:size-[40px] 2xl:size-[50px] flex justify-center items-center text-primary">
                     <svg class="size-[34px] 2xl:size-10" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <rect width="50" height="50" rx="5" fill="white"/>
@@ -316,8 +316,8 @@
       </div>
 
       
-      <main id="main-section" class="min-h-screen h-screen w-full pt-[100px] 2xl:pt-[140px] overflow-y-auto">
-        <div class="p-5 2xl:p-7 w-full">
+      <main id="main-section" class="min-h-screen h-screen flex flex-col w-full pt-[100px] 2xl:pt-[140px] overflow-y-auto">
+        <div class="p-5 2xl:p-7 w-full flex-1">
           <div class="flex items-center justify-between flex-wrap">
             <h3 class="text-gray-dark font-28 font-semibold capitalize 2xl:py-4">Add new contact</h3>
           </div>
