added upload contact

--- a/src/archive.html
+++ b/src/archive.html
@@ -334,7 +334,7 @@
                 <div id="dropdown" class="dropdown dropdown-default-position hidden w-[150px] bg-white border border-gray-dark/20">
                   <ul class="px-3 py-1.5" aria-labelledby="dropdownDefaultButton" class="px-3 py-1.5 text-gray-dark">
                     <li class="group/list border-b last:border-b-transparent duration-300 hover:border-secondary hover:text-secondary">
-                      <a class="flex items-center space-x-2 2xl:space-x-3 p-2 2xl:p-3" href="javascript:;">
+                      <a class="flex items-center space-x-2 2xl:space-x-3 p-2 2xl:p-3" href="upload.html">
                         <svg class="size-4 2xl:size[20px]" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <g clip-path="url(#clip0_105_3071)">
                           <path d="M18.554 10.0327C18.4842 9.96318 18.4015 9.90808 18.3104 9.87055C18.2193 9.83302 18.1218 9.8138 18.0233 9.81398C17.9248 9.81417 17.8273 9.83376 17.7364 9.87163C17.6455 9.9095 17.5629 9.96492 17.4934 10.0347L12.7454 14.7988V3.58057C12.7454 3.38165 12.6664 3.19089 12.5258 3.05024C12.3851 2.90958 12.1943 2.83057 11.9954 2.83057C11.7965 2.83057 11.6058 2.90958 11.4651 3.05024C11.3244 3.19089 11.2454 3.38165 11.2454 3.58057V14.7976L6.50613 10.0347C6.43664 9.96483 6.35407 9.90936 6.26313 9.87145C6.1722 9.83353 6.07468 9.81391 5.97616 9.81369C5.87764 9.81348 5.78004 9.83268 5.68894 9.8702C5.59784 9.90772 5.51503 9.96282 5.44523 10.0324C5.37544 10.1019 5.32003 10.1845 5.28218 10.2755C5.24432 10.3664 5.22476 10.464 5.22461 10.5625C5.22446 10.661 5.24373 10.7586 5.28131 10.8497C5.31889 10.9407 5.37405 11.0235 5.44363 11.0933L11.4641 17.1431L11.4647 17.1434C11.5344 17.2132 11.6171 17.2685 11.7082 17.3062C11.7992 17.344 11.8968 17.3634 11.9954 17.3634C12.094 17.3634 12.1916 17.344 12.2826 17.3062C12.3737 17.2685 12.4564 17.2132 12.526 17.1434L12.5266 17.1431L18.5559 11.0933C18.6255 11.0235 18.6806 10.9407 18.7181 10.8497C18.7556 10.7586 18.7749 10.6611 18.7747 10.5626C18.7745 10.4641 18.7549 10.3666 18.717 10.2757C18.6792 10.1848 18.6238 10.1022 18.554 10.0327Z" fill="currentColor"/>
@@ -384,13 +384,11 @@
                           </svg>   
                         </button>
                         <div id="dropdownDivider" class="dropdown-default-position-left hidden bg-white border border-gray-dark/20 w-[160px] 2xl:w-[225px]">
-                            <ul class="" aria-labelledby="dropdownDividerButton">
-                              <li>
-                                <a  class="capitalize block p-3 2xl:p-4 font-16 text-gray-light hover:bg-[#D5E0E0] hover:bg-opacity-30" href="javascript:;">                                   
-                                    all
-                                </a> 
-                              </li> 
-                            </ul>
+                          <ul class="px-3 py-1.5" aria-labelledby="dropdownDividerButton">
+                            <li class="px-2 cursor-pointer capitalize duration-300 flex items-center space-x-3 py-2.5 2xl:py-3 border-b last:border-b-transparent hover:border-b-secondary/60 hover:text-secondary [&.active]:border-b-secondary/60 [&.active]:text-secondary">
+                              <span>All</span>
+                            </li>
+                          </ul>
                         </div>
                     </div>
                   </div>
