--- a/src/filter-view.html
+++ b/src/filter-view.html
@@ -337,7 +337,7 @@
                 <div id="dropdown" class="dropdown dropdown-default-position hidden w-[150px] bg-white border border-gray-dark/20">
                   <ul class="px-3 py-1.5" aria-labelledby="dropdownDefaultButton" class="px-3 py-1.5 text-gray-dark">
                     <li class="group/list border-b last:border-b-transparent duration-300 hover:border-secondary hover:text-secondary">
-                      <a class="flex items-center space-x-2 2xl:space-x-3 p-2 2xl:p-3" href="javascript:;">
+                      <a class="flex items-center space-x-2 2xl:space-x-3 p-2 2xl:p-3" href="upload.html">
                         <svg class="size-4 2xl:size[20px]" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <g clip-path="url(#clip0_105_3071)">
                           <path d="M18.554 10.0327C18.4842 9.96318 18.4015 9.90808 18.3104 9.87055C18.2193 9.83302 18.1218 9.8138 18.0233 9.81398C17.9248 9.81417 17.8273 9.83376 17.7364 9.87163C17.6455 9.9095 17.5629 9.96492 17.4934 10.0347L12.7454 14.7988V3.58057C12.7454 3.38165 12.6664 3.19089 12.5258 3.05024C12.3851 2.90958 12.1943 2.83057 11.9954 2.83057C11.7965 2.83057 11.6058 2.90958 11.4651 3.05024C11.3244 3.19089 11.2454 3.38165 11.2454 3.58057V14.7976L6.50613 10.0347C6.43664 9.96483 6.35407 9.90936 6.26313 9.87145C6.1722 9.83353 6.07468 9.81391 5.97616 9.81369C5.87764 9.81348 5.78004 9.83268 5.68894 9.8702C5.59784 9.90772 5.51503 9.96282 5.44523 10.0324C5.37544 10.1019 5.32003 10.1845 5.28218 10.2755C5.24432 10.3664 5.22476 10.464 5.22461 10.5625C5.22446 10.661 5.24373 10.7586 5.28131 10.8497C5.31889 10.9407 5.37405 11.0235 5.44363 11.0933L11.4641 17.1431L11.4647 17.1434C11.5344 17.2132 11.6171 17.2685 11.7082 17.3062C11.7992 17.344 11.8968 17.3634 11.9954 17.3634C12.094 17.3634 12.1916 17.344 12.2826 17.3062C12.3737 17.2685 12.4564 17.2132 12.526 17.1434L12.5266 17.1431L18.5559 11.0933C18.6255 11.0235 18.6806 10.9407 18.7181 10.8497C18.7556 10.7586 18.7749 10.6611 18.7747 10.5626C18.7745 10.4641 18.7549 10.3666 18.717 10.2757C18.6792 10.1848 18.6238 10.1022 18.554 10.0327Z" fill="currentColor"/>
@@ -375,14 +375,14 @@
           </div>
 
           <div class="grid grid-cols-1 md:grid-cols-2 gap-5 mt-6">
-            <div class="bg-white p-6 2xl:p-10">
+            <div class="bg-white p-6 2xl:p-8">
               <div class="flex justify-between items-center">
-                <h2 class="font-50 text-primary font-medium mb-4 2xl:mb-8">
+                <h2 class="font-50 text-primary font-semibold mb-4 2xl:mb-8">
                   Robert Dewayne
                 </h2>
                 <button class="hover:text-secondary duration-300">
                   <svg
-                    class="-mt-2 size-[21px] 2xl:size-[30px]"
+                    class="-mt-2 size-[21px] 2xl:size-[25px]"
                     viewBox="0 0 30 30"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -415,7 +415,7 @@
               </div>
               <p class="font-18 text-gray-light">lorem ipsum</p>
             </div>
-            <div class="bg-white p-6 2xl:p-10">
+            <div class="bg-white p-6 2xl:p-8">
               <div class="grid grid-cols-12 gap-3">
                 <div class="col-span-12 lg:col-span-7">
                   <p class="font-28 font-semibold text-primary mb-4 2xl:mb-8">
@@ -426,7 +426,7 @@
                   >
                 </div>
                 <div class="col-span-12 lg:col-span-5">
-                  <p class="font-18 text-gray-light mb-4 2xl:pb-5">
+                  <p class="font-18 italic text-gray-light pb-5 2xl:pb-6">
                     They pay in 44 days on average
                   </p>
                   <span class="font-18 text-red1">45,300.00 Overdue</span>
@@ -434,6 +434,7 @@
               </div>
             </div>
           </div>
+          <!-- tab header -->
           <div class="bg-white px-6 py-4 2xl:px-8 2xl:py-6 mt-5 2xl:mt-7">
             <div class="flex flex-wrap justify-between gap-3">
               <ul
@@ -441,7 +442,7 @@
                 data-tabs-toggle="#default-tab-content"
                 data-tabs-active-classes="text-secondary"
                 role="tablist"
-                class="flex flex-wrap items-center gap-x-8 2xl:gap-x-12 gap-y-4 font-22"
+                class="flex flex-wrap font-semibold items-center gap-4 sm:gap-x-8 2xl:gap-x-12 gap-y-4 font-22"
               >
                 <li
                   role="presentation"
@@ -493,7 +494,7 @@
                   Message
                 </a>
               </ul>
-              <button>
+              <a href="archive.html">
                 <svg
                   class="duration-300 mx-auto size-6 2xl:size-8 text-primary hover:text-secondary"
                   width="100pt"
@@ -525,9 +526,11 @@
                     />
                   </g>
                 </svg>
-              </button>
+              </a>
             </div>
           </div>
+
+          <!-- tab content -->
           <div id="default-tab-content">
 
             <div class="hidden" id="activity" role="tabpanel" aria-labelledby="activity-tab">
@@ -562,14 +565,9 @@
                           id="dropdownDivider"
                           class="dropdown-default-position-left hidden bg-white border border-gray-dark/20 w-[160px] 2xl:w-[225px]"
                         >
-                          <ul class="" aria-labelledby="dropdownDividerButton">
-                            <li>
-                              <a
-                                class="capitalize block p-3 2xl:p-4 font-16 text-gray-light hover:bg-[#D5E0E0] hover:bg-opacity-30"
-                                href="javascript:;"
-                              >
-                                all
-                              </a>
+                          <ul class="px-3 py-1.5" aria-labelledby="dropdownDividerButton">
+                            <li class="px-2 cursor-pointer capitalize duration-300 flex items-center space-x-3 py-2.5 2xl:py-3 border-b last:border-b-transparent hover:border-b-secondary/60 hover:text-secondary [&.active]:border-b-secondary/60 [&.active]:text-secondary">
+                              <span>All</span>
                             </li>
                           </ul>
                         </div>
@@ -645,6 +643,7 @@
                         </div>
                         <div class="flex items-center">
                           <div
+                            class="group/main ml-4 flex items-center justify-center"
                             class="group/main ml-4 flex items-center justify-center"
                           >
                             <button
@@ -1654,32 +1653,12 @@
                           </td>
                           <td class="px-5 py-5 2xl:px-7 2xl:py-7">
                             <p
-                              class="flex items-center space-x-2 font-18 text-default-green name"
+                              class="flex items-center space-x-2 font-18 !text-default-yellow name"
                             >
-                              <svg
-                                class="size-[15px] 2xl:size-[20px]"
-                                width="20"
-                                height="20"
-                                viewBox="0 0 20 20"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
-                              >
-                                <ellipse
-                                  cx="10"
-                                  cy="9.98611"
-                                  rx="10"
-                                  ry="9.98611"
-                                  fill="#27AE60"
-                                />
-                                <path
-                                  d="M6 10.359L8.374 12.7287L13.12 7.98926"
-                                  stroke="white"
-                                  stroke-width="2"
-                                  stroke-linecap="round"
-                                  stroke-linejoin="round"
-                                />
-                              </svg>
-                              <span class="capitalize">paid</span>
+                              <svg class="size-[15px] 2xl:size-[20px]" viewBox="0 0 14 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.25 0.25H2.375H11.375H12.5C13.0977 0.25 13.625 0.777344 13.625 1.375C13.625 2.00781 13.0977 2.5 12.5 2.5V2.88672C12.5 4.39844 11.9023 5.83984 10.8477 6.89453L8.45703 9.25L10.8477 11.6406C11.9023 12.6953 12.5 14.1367 12.5 15.6133V16C13.0977 16 13.625 16.5273 13.625 17.125C13.625 17.7578 13.0977 18.25 12.5 18.25H11.375H2.375H1.25C0.617188 18.25 0.125 17.7578 0.125 17.125C0.125 16.5273 0.617188 16 1.25 16V15.6133C1.25 14.1367 1.8125 12.6953 2.86719 11.6406L5.25781 9.25L2.86719 6.89453C1.8125 5.83984 1.25 4.39844 1.25 2.88672V2.5C0.617188 2.5 0.125 2.00781 0.125 1.375C0.125 0.777344 0.617188 0.25 1.25 0.25ZM10.25 15.6133V15.6484C10.25 14.7344 9.86328 13.8906 9.23047 13.2578L6.875 10.8672L4.48438 13.2578C3.85156 13.8906 3.5 14.7344 3.5 15.6133V16H10.25V15.6133Z" fill="#FFAF36"/>
+                                </svg>
+                              <span class="capitalize">pending</span>
                             </p>
                           </td>
                           <td class="px-5 py-5 2xl:px-7 2xl:py-7">
@@ -2669,10 +2648,10 @@
   
             <div
             id="details" role="tabpanel" aria-labelledby="details-tab"
-              class="hidden bg-white px-6 py-4 2xl:px-8 2xl:py-6 mt-5 2xl:mt-7 space-y-8 2xl:space-y-10"
+              class="hidden bg-white px-6 py-4 2xl:px-8 2xl:py-6 mt-5 2xl:mt-7 space-y-8 2xl:space-y-12"
             >
               <div>
-                <h3 class="font-24 capitalize mb-4 font-medium">
+                <h3 class="font-24 capitalize mb-4 2xl:mb-6 font-medium">
                   Contact Details
                 </h3>
                 <div class="flex flex-wrap -mx-4 gap-y-6 2xl:gap-y-8">
@@ -2698,7 +2677,7 @@
                 </div>
               </div>
               <div>
-                <h3 class="font-24 capitalize mb-4 font-medium">Main Person</h3>
+                <h3 class="font-24 capitalize mb-4 2xl:mb-6 font-medium">Main Person</h3>
                 <div class="flex flex-wrap -mx-4 gap-y-6 2xl:gap-y-8">
                   <div class="px-4 w-full lg:w-1/2">
                     <label class="default-label" for="">Full Name</label>
@@ -2715,7 +2694,7 @@
                 </div>
               </div>
               <div>
-                <h3 class="font-24 capitalize mb-4 font-medium">
+                <h3 class="font-24 capitalize mb-4 2xl:mb-6 font-medium">
                   Business information
                 </h3>
                 <div class="flex flex-wrap -mx-4 gap-y-6 2xl:gap-y-8">
