--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
                 <div id="dropdown" class="dropdown dropdown-default-position hidden w-[150px] bg-white border border-gray-dark/20">
                   <ul aria-labelledby="dropdownDefaultButton" class="px-3 py-1.5 text-gray-dark">
                     <li class="group/list border-b last:border-b-transparent duration-300 hover:border-secondary hover:text-secondary">
-                      <a class="flex items-center space-x-2 2xl:space-x-3 p-2 2xl:p-3" href="javascript:;">
+                      <a class="flex items-center space-x-2 2xl:space-x-3 p-2 2xl:p-3" href="upload.html">
                         <svg class="size-4 2xl:size[20px]" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <g clip-path="url(#clip0_105_3071)">
                           <path d="M18.554 10.0327C18.4842 9.96318 18.4015 9.90808 18.3104 9.87055C18.2193 9.83302 18.1218 9.8138 18.0233 9.81398C17.9248 9.81417 17.8273 9.83376 17.7364 9.87163C17.6455 9.9095 17.5629 9.96492 17.4934 10.0347L12.7454 14.7988V3.58057C12.7454 3.38165 12.6664 3.19089 12.5258 3.05024C12.3851 2.90958 12.1943 2.83057 11.9954 2.83057C11.7965 2.83057 11.6058 2.90958 11.4651 3.05024C11.3244 3.19089 11.2454 3.38165 11.2454 3.58057V14.7976L6.50613 10.0347C6.43664 9.96483 6.35407 9.90936 6.26313 9.87145C6.1722 9.83353 6.07468 9.81391 5.97616 9.81369C5.87764 9.81348 5.78004 9.83268 5.68894 9.8702C5.59784 9.90772 5.51503 9.96282 5.44523 10.0324C5.37544 10.1019 5.32003 10.1845 5.28218 10.2755C5.24432 10.3664 5.22476 10.464 5.22461 10.5625C5.22446 10.661 5.24373 10.7586 5.28131 10.8497C5.31889 10.9407 5.37405 11.0235 5.44363 11.0933L11.4641 17.1431L11.4647 17.1434C11.5344 17.2132 11.6171 17.2685 11.7082 17.3062C11.7992 17.344 11.8968 17.3634 11.9954 17.3634C12.094 17.3634 12.1916 17.344 12.2826 17.3062C12.3737 17.2685 12.4564 17.2132 12.526 17.1434L12.5266 17.1431L18.5559 11.0933C18.6255 11.0235 18.6806 10.9407 18.7181 10.8497C18.7556 10.7586 18.7749 10.6611 18.7747 10.5626C18.7745 10.4641 18.7549 10.3666 18.717 10.2757C18.6792 10.1848 18.6238 10.1022 18.554 10.0327Z" fill="currentColor"/>
@@ -475,7 +475,7 @@
                                 <path d="M21.1752 10.6338H22.4724C25.3019 10.6338 27.5947 12.9321 27.5947 15.7699L27.5947 22.5771C27.5947 25.4065 25.3075 27.6993 22.485 27.6993L6.99574 27.6993C4.16625 27.6993 1.87207 25.3995 1.87207 22.5632L1.87207 15.7545C1.87207 12.9266 4.16069 10.6338 6.98184 10.6338H8.29161" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                               </svg>                                        
                           </a>
-                          <a class="w-1/2 sm:w-fit flex justify-center sm:justify-start items-center space-x-3 border-l pl-4 group" href="javascript:;">
+                          <a href="archive.html" class="w-1/2 sm:w-fit flex justify-center sm:justify-start items-center space-x-3 border-l pl-4 group">
                               <p class="duration-300 text-gray-dark font-20 font-semibold group-hover:text-secondary">Archive</p>
                               <svg class="group-hover:text-secondary duration-300 mx-auto size-6 2xl:size-8 text-primary" width="100pt" height="100pt" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg">
                                 <g id="currentColorff">
@@ -618,7 +618,7 @@
                               </svg>
                           </button>
                           <div id="table-dropdowntabelAction3" class="hidden dropdown-default-position-middle w-[130px] 2xl:w-[170px] bg-white border border-gray-dark/20 px-3">
-                            <ul aria-labelledby="table-dropdown3">
+                            <ul class="py-1.5" aria-labelledby="table-dropdown3">
                               <li class="border-b hover:border-secondary last:border-b-transparent duration-300">
                                 <a class="duration-300 flex items-center hover:text-secondary space-x-3 px-3 py-2 2xl:p-3" href="javascript:;">
                                   <svg class="w-3.5 2xl:w-4" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -685,7 +685,7 @@
                               </svg>
                           </button>
                           <div id="table-dropdowntabelAction4" class="hidden dropdown-default-position-middle w-[130px] 2xl:w-[170px] bg-white border border-gray-dark/20 px-3">
-                            <ul aria-labelledby="table-dropdown4">
+                            <ul class="py-1.5" aria-labelledby="table-dropdown4">
                               <li class="border-b hover:border-secondary last:border-b-transparent duration-300">
                                 <a class="duration-300 flex items-center hover:text-secondary space-x-3 px-3 py-2 2xl:p-3" href="javascript:;">
                                   <svg class="w-3.5 2xl:w-4" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -752,7 +752,7 @@
                               </svg>
                           </button>
                           <div id="table-dropdowntabelAction5" class="hidden dropdown-default-position-middle w-[130px] 2xl:w-[170px] bg-white border border-gray-dark/20 px-3">
-                            <ul aria-labelledby="table-dropdown5">
+                            <ul class="py-1.5" aria-labelledby="table-dropdown5">
                               <li class="border-b hover:border-secondary last:border-b-transparent duration-300">
                                 <a class="duration-300 flex items-center hover:text-secondary space-x-3 px-3 py-2 2xl:p-3" href="javascript:;">
                                   <svg class="w-3.5 2xl:w-4" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -819,7 +819,7 @@
                               </svg>
                           </button>
                           <div id="table-dropdowntabelAction" class="hidden dropdown-default-position-middle w-[130px] 2xl:w-[170px] bg-white border border-gray-dark/20 px-3">
-                            <ul aria-labelledby="table-dropdown">
+                            <ul class="py-1.5" aria-labelledby="table-dropdown">
                               <li class="border-b hover:border-secondary last:border-b-transparent duration-300">
                                 <a class="duration-300 flex items-center hover:text-secondary space-x-3 px-3 py-2 2xl:p-3" href="javascript:;">
                                   <svg class="w-3.5 2xl:w-4" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
